# oxyde

./: .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  Makefile  ORM_API_CLASSIFICATION.md  README.md  mkdocs.yml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  release-core.yml  release-python.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/advanced/internals/: index.html
0.1/advanced/performance/: index.html
0.1/advanced/raw-queries/: index.html
0.1/cheatsheet/: index.html
0.1/faq/: index.html
0.1/getting-started/first-project/: index.html
0.1/getting-started/installation/: index.html
0.1/getting-started/quickstart/: index.html
0.1/guide/aggregation/: index.html
0.1/guide/connections/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/cheatsheet/: index.html
0.2/faq/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  sitemap.xml
0.3/cheatsheet/: index.html
0.3/faq/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  sitemap.xml
0.4/changelog/: index.html
0.4/cheatsheet/: index.html
0.4/faq/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  sitemap.xml
0.5/changelog/: index.html
0.5/cheatsheet/: index.html
0.5/faq/: index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html  sitemap.xml
0.6/changelog/: index.html
0.6/cheatsheet/: index.html
0.6/faq/: index.html
0.6/search/: search_index.json
0.7/: 404.html  index.html  sitemap.xml
0.7/changelog/: index.html
0.7/cheatsheet/: index.html
0.7/faq/: index.html
0.7/search/: search_index.json
crates/oxyde-codec/: Cargo.toml
crates/oxyde-core-py/: Cargo.toml  README.md  pyproject.toml
crates/oxyde-core-py/src/: convert.rs  direct.rs  execute.rs  lib.rs  migration.rs  pool.rs  types.rs
crates/oxyde-driver/: Cargo.toml
crates/oxyde-driver/src/: lib.rs
crates/oxyde-driver/src/bind/: common.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/oxyde-driver/src/convert/: encoder.rs  mod.rs  mysql.rs  mysql_enc.rs  postgres.rs  postgres_enc.rs  sqlite.rs  sqlite_enc.rs
crates/oxyde-driver/src/execute/: insert.rs  mod.rs  query.rs  traits.rs
crates/oxyde-driver/src/explain/: mod.rs
crates/oxyde-driver/src/pool/: api.rs  handle.rs  mod.rs
crates/oxyde-driver/src/transaction/: api.rs  inner.rs  mod.rs
crates/oxyde-driver/tests/: sql_pipeline.rs
crates/oxyde-migrate/: Cargo.toml
crates/oxyde-migrate/src/: diff.rs  lib.rs  op.rs  spec_sql.rs  sql.rs  tests.rs  types.rs
crates/oxyde-migrate/tests/: golden_ddl.rs  migration_tests.rs
crates/oxyde-migrate/tests/snapshots/: golden_ddl__add_drop_column_table__postgres.snap  golden_ddl__alter_column__postgres.snap  golden_ddl__alter_column_enum__mysql.snap  golden_ddl__alter_column_enum__postgres.snap  golden_ddl__create_table_db_type_overrides__mysql.snap  golden_ddl__create_table_db_type_overrides__postgres.snap  golden_ddl__create_table_pk_variants__mysql.snap  golden_ddl__create_table_pk_variants__sqlite.snap  golden_ddl__create_table_with_fk__sqlite.snap  golden_ddl__enum_add_value_ordering__mysql.snap  golden_ddl__enum_create_table__postgres.snap  golden_ddl__enum_drop_and_manual_alter__postgres.snap  golden_ddl__foreign_key_ops__mysql.snap  golden_ddl__foreign_key_ops__postgres.snap  golden_ddl__index_partial__sqlite.snap
crates/oxyde-query/: Cargo.toml
crates/oxyde-query/src/: lib.rs
crates/oxyde-query/src/builder/: bulk.rs  delete.rs  insert.rs  select.rs  update.rs
crates/oxyde-query/src/filter/: expression.rs  mod.rs
crates/oxyde-query/src/utils/: bind.rs  mod.rs  value.rs
crates/oxyde-sql/: Cargo.toml
docs/: changelog.md  cheatsheet.md  faq.md  index.md  requirements.txt
docs/advanced/: benchmarks.md  internals.md  performance.md  raw-queries.md
docs/getting-started/: fastapi-project.md  first-project.md  installation.md  quickstart.md
docs/guide/: aggregation.md  connections.md  exceptions.md  expressions.md  fields.md  filtering.md  migrations.md  models.md  queries.md  relations.md  transactions.md
examples/: README.md  advanced_queries.py  postgres_schema.sql  quickstart.py  transactions.py
python/: pyproject.toml
python/oxyde/: __init__.py  _msgpack.py  exceptions.py
python/oxyde/core/: ir.py  (+5 more)
(+292 files in other folders)
