[package]
name = "oxyde-core-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "_oxyde_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
pyo3 = { version = "0.26", default-features = false, features = ["macros", "anyhow", "serde"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
rmp-serde = "1.1"
oxyde-codec = { path = "../oxyde-codec" }
oxyde-query = { path = "../oxyde-query" }
oxyde-driver = { path = "../oxyde-driver" }
oxyde-migrate = { path = "../oxyde-migrate" }
once_cell = "1.19"
sea-query = "0.31"
