[package]
name = "oxyde-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "any", "uuid", "chrono", "json"] }
once_cell = "1.19"
sea-query = "0.31"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
oxyde-codec = { path = "../oxyde-codec" }
oxyde-query = { path = "../oxyde-query" }
