[package]
name = "oxyde-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "mysql", "any", "uuid", "chrono", "json", "rust_decimal"] }
once_cell = "1.19"
sea-query = { version = "0.31", features = ["with-chrono", "with-uuid", "with-json", "with-rust_decimal", "postgres-array"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rmp = "0.8"
rmpv = { version = "1", features = ["with-serde"] }
futures = "0.3"
oxyde-codec = { path = "../oxyde-codec" }

[dev-dependencies]
tempfile = "3"
rmp-serde = "1.1"
oxyde-query = { path = "../oxyde-query" }
